Added cab file handling

--- a/Src/BtsMsiLib/BtsMsiLib.csproj
+++ b/Src/BtsMsiLib/BtsMsiLib.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BtsApplicationValidator.cs" />
+    <Compile Include="Cab\CabFileWriter.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Model\BtsApplication.cs">
       <SubType>Code</SubType>
     </Compile>
