--- a/Src/BtsMsiLib/BtsMsiLib.csproj
+++ b/Src/BtsMsiLib/BtsMsiLib.csproj
@@ -66,7 +66,7 @@
     <Compile Include="ApplicationDefinitionFile\ResourceNode.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BtsApplicationValidator.cs" />
+    <Compile Include="Model\BtsApplicationValidator.cs" />
     <Compile Include="Cab\CabFileWriter.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -88,7 +88,7 @@
     <Compile Include="Msi\MsiFileWriter.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ResourceValidator.cs" />
+    <Compile Include="Model\ResourceValidator.cs" />
     <Compile Include="MsiWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\FileHelper.cs">
