--- a/Src/BtsMsiLib/BtsMsiLib.csproj
+++ b/Src/BtsMsiLib/BtsMsiLib.csproj
@@ -30,17 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Deployment.Compression, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ce35f76fcda82bad, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\Microsoft.Deployment.Compression.dll</HintPath>
+    <Reference Include="Microsoft.Deployment.Compression">
+      <HintPath>..\..\..\..\Build\Microsoft.Deployment.Compression.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Deployment.Compression.Cab, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ce35f76fcda82bad, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\Microsoft.Deployment.Compression.Cab.dll</HintPath>
+    <Reference Include="Microsoft.Deployment.Compression.Cab">
+      <HintPath>..\..\..\..\Build\Microsoft.Deployment.Compression.Cab.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Deployment.WindowsInstaller, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ce35f76fcda82bad, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Deployment.WindowsInstaller, Version=3.0.0.0, Culture=neutral, PublicKeyToken=9f4be179981a58d1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\Microsoft.Deployment.WindowsInstaller.dll</HintPath>
+      <HintPath>..\..\..\..\Build\Microsoft.Deployment.WindowsInstaller.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -76,6 +74,7 @@
     <Compile Include="Model\IMsiWriter.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Model\MsiVersion.cs" />
     <Compile Include="Model\Resource.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -100,6 +99,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Msi\BT2013\ApplicationTemplate.msi" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Msi\BT2013R2\ApplicationTemplate.msi" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Msi\BT2016\ApplicationTemplate.msi" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
