--- a/Src/BtsMsiLib/BtsMsiLib.csproj
+++ b/Src/BtsMsiLib/BtsMsiLib.csproj
@@ -31,14 +31,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Deployment.Compression">
-      <HintPath>..\..\..\..\Build\Microsoft.Deployment.Compression.dll</HintPath>
+      <HintPath>..\..\Dependencies\Microsoft.Deployment.Compression.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Deployment.Compression.Cab">
-      <HintPath>..\..\..\..\Build\Microsoft.Deployment.Compression.Cab.dll</HintPath>
+      <HintPath>..\..\Dependencies\Microsoft.Deployment.Compression.Cab.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Deployment.WindowsInstaller, Version=3.0.0.0, Culture=neutral, PublicKeyToken=9f4be179981a58d1, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Build\Microsoft.Deployment.WindowsInstaller.dll</HintPath>
+    <Reference Include="Microsoft.Deployment.WindowsInstaller">
+      <HintPath>..\..\Dependencies\Microsoft.Deployment.WindowsInstaller.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
